// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes on hovering 1`] = `
<a
  className="narmal"
  href="http://www.google.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Google
</a>
`;

exports[`Link changes on hovering 2`] = `
<a
  className="hovered"
  href="http://www.google.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Google
</a>
`;

exports[`Link changes on hovering 3`] = `
<a
  className="narmal"
  href="http://www.google.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Google
</a>
`;
